fix: bucket name validation and select list flex wrap

--- a/src/Components/SelectList/selectList.style.css
+++ b/src/Components/SelectList/selectList.style.css
@@ -1,6 +1,7 @@
 .select-list-wrapper {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .option-wrap {
